Changelog
---------

Version 2.4.0
~~~~~~~~~~~~~

* Adding larger command line view to see entire command at once
* Changing to using qtpy which supports dynamic linking of either pyside2 or pyqt5, instead of only Pyside2
* Fixing #4 Error Box when someone other than video file is dropped onto fastflix
* Fixing #44 Remove metadata from original file

Version 2.3.4
~~~~~~~~~~~~~

* Fixing audio downmixing only taking for last downmixing setting

Version 2.3.3
~~~~~~~~~~~~~

* Fixing #46 max-cll was being sent incorrectly to x265-params (thanks to HannesJo0139)
* Fixing #43 audio bitrate being set to wrong track (thanks to HannesJo0139)

Version 2.3.2
~~~~~~~~~~~~~

* Fixing #39 HEVC two pass bitrate does not work (thanks to schlotkins)


Version 2.3.1
~~~~~~~~~~~~~

* Fixing #35 custom CRF / bitrate values not updating in the command panel (thanks to schlotkins)

Version 2.3.0
~~~~~~~~~~~~~

* Adding to pypi
* Changing package to "fastflix"
* Changing that custom mode fields are blocked unless "Custom" is selected
* Changing always allowing pass-through for audio
* Fixing HDR details not being parsed due to not quoting path to ffprobe (thanks to schlotkins)
* Fixing killing child processes on *nix

Version 2.2.0
~~~~~~~~~~~~~

* Adding custom extra ffmpeg args for HEVC
* Adding max mux queue size change for HEVC
* Fixing issue with codec not being set as copy (thanks to schlotkins)
* Fixing quotes around parens on linux

Version 2.1.1
~~~~~~~~~~~~~

* Fixing parse_hdr_details bug (thanks to Jan Temešinko and schlotkins)

Version 2.1.0
~~~~~~~~~~~~~

* Adding config file that will allow for customizable work directory
* Adding support for HEVC conversion
* Adding support for audio downmixing and custom titles
* Adding log to file
* Adding realtime logging for ffmpeg conversions
* Adding support to automatically download SVT-AV1
* Fixing windows scaling display issues
* Fixing scaling to properly keep scaling and will be red when bad