@@ -65,7 +65,11 @@ class AV1(QtWidgets.QWidget):
 
     def init_remove_hdr(self):
         layout = QtWidgets.QHBoxLayout()
-        layout.addWidget(QtWidgets.QLabel("Remove HDR"))
+        remove_hdr_level = QtWidgets.QLabel("Remove HDR")
+        remove_hdr_level.setToolTip(
+            "Convert BT2020 colorspace into bt709\n " "WARNING: This will take much longer and result in a larger file"
+        )
+        layout.addWidget(remove_hdr_level)
         self.widgets.remove_hdr = QtWidgets.QComboBox()
         self.widgets.remove_hdr.addItems(["No", "Yes"])
         self.widgets.remove_hdr.setCurrentIndex(0)
