@@ -5,9 +5,10 @@ Version 2.4.0
 ~~~~~~~~~~~~~
 
 * Adding larger command line view to see entire command at once
-* Changing to using qtpy which supports dynamic linking of either pyside2 or pyqt5, instead of only Pyside2
-* Fixing #4 Error Box when someone other than video file is dropped onto fastflix
+* Changing to using qtpy which supports dynamic linking of either PySide2 or pyqt5, instead of only PySide2
+* Fixing #4 Error Message Box when someone other than video file is dropped onto fastflix
 * Fixing #44 Remove metadata from original file
+* Fixing #20 Adding hoverhelp for most converter options
 
 Version 2.3.4
 ~~~~~~~~~~~~~
